and Superfluous enabled. There is no easy/clean way to fix this, so Window
Maker will disable the animation of window creation if the focus mode is
either sloppy or auto AND AutoFocus=NO.

If you want the animation, enable AutoFocus or use manual focus mode
(prefered). 


The NoWindowUnderDock option was removed
----------------------------------------
To obtain the same result, use the "Floating Dock" option in the dock menu.


Persistent Program Suplied Icons
--------------------------------

Application supplied icons are now stored, so that the dock will keep
showing them after the app is exited. The icons are stored at
~/GNUstep/.AppInfo/WindowMaker/


--- 0.20.0

  
Multihead support. wmaker will now manage all screens that are attached to the
display. 
------------------------------------------------------------------------------
  

It does so from a single process (instead of spawning a new process for each
screen, like fvwm does). This keeps memory usage a lot lower than fvwm.

State files have a suffix .n, where n is the number of the screen.

Since I don't have a real multiheaded machine, it probably has bugs.

Superfluous
-----------

Yet another useless superfluous animation. Find out what exactly it is
by yourself :)


exitscript
----------

~/G/L/W/exitscript will be called automatically when wmaker is exited.


New runtime options
-------------------

1. Miniaturization animation is now selectable by a runtime option
Add a line with

IconificationStyle = <style>;

to your WindowMaker configuration file.
<style> can be one of: Zoom, Twist, Flip or None
Case doesn't matter, and default is Zoom.


2. Edge resistance.
This can be controlled by setting:

EdgeResistance = xxx;

in your WindowMaker configuration file.
xxx is an integer greater than 0 and represents the number of pixels of edge
resistance. Setting it to 0 (default) will disable this feature.

New theme
---------

A new theme named Night, is available in this distribution.



--- 0.19.3
