@@ -253,7 +253,7 @@ dnl MIT-SHM support
 dnl ===============
 shm=yes
 AC_ARG_ENABLE(shm,
-[  --disable-shm	  	disable usage of MIT-SHM extension],
+[  --disable-shm           disable usage of MIT-SHM extension],
 		shm=$enableval, shm=yes)
 
 if test "$shm" = yes; then
@@ -387,7 +387,7 @@ dnl giflib uses dangerous function naming... (namespace clashing)
 dnl
 jpeg=yes
 AC_ARG_ENABLE(gif,
-[  --disable-gif		disable GIF support through libgif or libungif],
+[  --disable-gif           disable GIF support through libgif or libungif],
 	gif=$enableval, gif=yes)
 
 if test "$gif" = yes; then
@@ -561,11 +561,13 @@ fi
 AC_SUBST(DFLAGS)
 
 
-dnl --Sound support - Dan
+dnl Sound support - Dan
 dnl =============================================
+sound=yes
 AC_ARG_ENABLE(sound, 
-[  --enable-sound	  enable sound support ],, enable_sound=no)
-if test "$enable_sound" = yes; then	
+[  --disable-sound	  disable sound support ],
+		sound=$enableval, sound=yes)
+if test "$sound" = yes; then	
 	SOUND="#define WMSOUND"	
 else
 	SOUND="#undef WMSOUND"	
@@ -602,7 +604,7 @@ dnl ==============================================
 appspath=""
 
 AC_ARG_WITH(appspath,
-[  --with-appspath=PATH   specify the path of the GNUstep applications directory ])
+[  --with-appspath=PATH    specify the path of the GNUstep applications directory])
 
 if test "x$appspath" = "x"; then
     gnustepdir="${prefix}/GNUstep"
@@ -786,6 +788,12 @@ dnl ==========================
 
 supported_gfx="$supported_gfx PPM (built-in)"
 
+if test "x$MOFILES" = "x"; then
+	mof=none
+else
+	mof=$MOFILES
+fi
+
 echo
 echo "Window Maker was configured as follows:"
 echo
@@ -793,11 +801,7 @@ echo "Installation path prefix: $prefix"
 echo "Installation path prefix for binaries: $exec_prefix"
 echo "Installation path for WPrefs.app: $wprefsdir"
 echo "Graphic format libraries: $supported_gfx"
-if test "x$MOFILES" = "x"; then
-	mof=none
-else
-	mof=$MOFILES
-fi
+echo "Sound support: $sound"
 echo "Translated message files to install: $mof"
 if test "x$MOFILES" != "x"; then
 	echo "Installation path of translated messages: $NLSDIR"
