@@ -23,6 +23,7 @@
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
+#include <errno.h>
 #include <X11/Xlib.h>
 #include <X11/Xatom.h>
 #include <sys/time.h>
